@@ -1,4 +1,4 @@
-.TH MIDI2ABC 1 "09 July 2005"
+.TH MIDI2ABC 1 "10 March 2008"
 .SH NAME
 \fBmidi2abc\fP \- program to convert MIDI format files to abc notation
 .SH SYNOPSIS
@@ -8,7 +8,8 @@ midi2abc -f \fIinfile\fP [-xa] [-ga]
 [-gu] [-b \fIbars\fP] [-Q \fItempo\fP] [-u \fipulses\fP]
 [-k \fIkey\fP] [-c \fIchannel\fP] [-obpl] [-bpl \fibars\fP] [-bps \fPbars\fP]
 [-o \fIfilename\fP] [-s] [-sr \fiunits\fP] [-sum] [-nt]
-[-splitbars] [-splitvoices] [-midigram] [-mftext] [-nogr]
+[-splitbars] [-splitvoices] [-midigram] [-mftext] [-nogr] [-title \fistring\fP]
+[-origin \fistring\fP]
 
 .SH DESCRIPTION
 \fImidi2abc\fP takes a MIDI format file and converts it to something as close
@@ -159,6 +160,14 @@ When this option appears, all other options are ignored and
 no abc file is produced. Instead a list of all the MIDI
 commands are printed. The output is designed to go into
 a graphical user interface provided by runabc.tcl.
+.TP
+.B -title \fistring\fP
+Replaces the default title field following T: with
+the given string.
+.TP
+.B -origin \fistring\fP
+Adds an O: field with the given string.
+
 
 .SS FEATURES
 * The key is chosen so as to minimize the number of accidentals. 
@@ -217,7 +226,7 @@ James Allwright <J.R.Allwright@westminster.ac.uk>
 .SH SUPPORTED
 Seymour Shlien <seymour.shlien@crc.ca>
 .SH VERSION
-This man page describes midi2abc version 2.87 from July 09 2005.
+This man page describes midi2abc version 2.91 from March 09 2008.
 .SH COPYRIGHT
 Copyright 1999 James Allwright
 .PP
